Added settings API
